diesel_compile_tests/tests/fail/as_expression_bad_sql_type.rs
extern crate diesel;
use diesel::expression::AsExpression;

#[derive(AsExpression)]
#[sql_type(Foo)]
#[sql_type]
#[sql_type = "@%&&*"]
#[sql_type = "1omg"]
struct Lol;

fn main() {}
